# GenshinImpact_PaimonShutUp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.manifest  main.py  requirements.txt  settings.cfg  tesseract.cpp  tesseract3.py
.github/workflows/: build.yml
source/: audio_session.cpp  audio_session.h  config.cpp  config.h  debug_widget.cpp  debug_widget.h  image.cpp  image.h  main.cpp  tesseract.cpp  tesseract.h
